# swyperloom-env

./: .gitignore  AGENTS.md  PRIME_POD.md  README.md  pyproject.toml  release.py  swyperloom.py  train_unsloth.py
.prime/: .env-metadata.json  lab.json
.prime/skills/browse-environments/: SKILL.md
.prime/skills/create-environments/: SKILL.md
.prime/skills/evaluate-environments/: SKILL.md
.prime/skills/optimize-with-environments/: SKILL.md
.prime/skills/review-environments/: SKILL.md
.prime/skills/train-with-environments/: SKILL.md
configs/rl/: swyperloom-1b.toml  swyperloom-tiny.toml  swyperloom.toml
configs/rl/swyperloom-1gpu/: infer.toml  orch.toml  train.toml
scripts/: install-into-prime-rl.sh
templates/: completion.jinja
