[project]
name = "swyperloom"
description = "Story-continuation GRPO environment for Llama-3.1-8B base, judged by Kimi K2 (Prime Inference) on diversity/interestingness/coherence/creativity."
tags = ["creative-writing", "completion", "llm-judge", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.12",
    "datasets>=2.19",
    "openai>=1.40",
]

[project.optional-dependencies]
# Installed on the pod right before running `python release.py` to
# merge the LoRA, convert to GGUF, and push to HuggingFace.
release = [
    "peft>=0.10",
    "transformers>=4.44",
    "huggingface_hub>=0.24",
    "torch",
]
# Single-GPU local training via Unsloth + TRL's GRPOTrainer — a
# lighter alternative to the prime-rl two-pane setup. Use with
# `uv run python train_unsloth.py`.
# unsloth_zoo requires the 1.x huggingface_hub API, which clashes
# with verifiers' 0.x pin — so install the train extra into a
# *separate* venv from the base env if you hit conflicts.
train = [
    "unsloth",
    "trl>=0.10",
    "peft>=0.10",
    "huggingface_hub>=1.5.0,<2",
    "transformers>=4.48",
    "torch",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["swyperloom.py", "pyproject.toml", "cc-stories-short.txt"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 4
