[project]
name = "swyperloom"
description = "Story-continuation GRPO environment for Llama-3.1-8B base, judged by Kimi K2 (Prime Inference) on diversity/interestingness/coherence/creativity."
tags = ["creative-writing", "completion", "llm-judge", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.12",
    "datasets>=2.19",
    "openai>=1.40",
]

[project.optional-dependencies]
# Installed on the pod right before running `python release.py` to
# merge the LoRA, convert to GGUF, and push to HuggingFace.
release = [
    "peft>=0.10",
    "transformers>=4.44",
    "huggingface_hub>=0.24",
    "torch",
]
# NOTE: the training deps (unsloth / trl / vllm / mergekit) are NOT
# declared here as a `[train]` extra because their pydantic pins
# conflict with verifiers' pydantic>=2.11 requirement, breaking
# `uv run` resolution for anyone who installs `.[train]` in the same
# venv as the base env. Install them manually in a separate
# `.venv-unsloth/` — see the README "Training" section for the exact
# one-liner.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["swyperloom.py", "pyproject.toml", "cc-stories-short.txt"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 4
